# panos-eda-collection

./: .dockerignore  .gitignore  Dockerfile  README.md  galaxy.yml  pyproject.toml  requirements.txt  requirements.yaml  tasks.py
.github/workflows/: main.yml
docker/arm/: Dockerfile  README.md  requirements.yaml
docker/x86/: README.md
eda/panos_http_profiles/: decryption.json
eda/playbooks/: decryption-remediation.yml
eda/rulebooks/: panos.yaml
plugins/event_source/: logs.py
tests/: README.md
