[tool.poetry]
name = "cdot65-panos-eda-collection"
version = "0.1.0"
description = "Ansible EDA development environment"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "cdot65_panos_eda_collection"}]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^7.3.0"
dpath = "^2.1.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
invoke = "^2.0.0"
ipython = "^8.11.0"
ipdb = "^0.13.13"
distro = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
